# proj_fastapi01

./: 2일차_git_branch_전략_총정리  3일차_프로젝트_구조_분석_총정리  docker-compose.yml  pyproject.toml  홍현정_2일차_git_branch_전략.md  홍현정_3일차 folders.md
Docs/: 3일차_db_migration.md  4일차_USER_API_설계.md  5일차_사용자관리_API_테스트.md  5일차_환자관리_API_설계.md  5일차_환자관리_API_테스트.md  Compare_pms.md  Meeting_log.md  day8_docker.md  team_rules.md  박소정_3일차 프로젝트 구조 분석 문서 작성
alembic/versions/: 253c9e547001_create_patients_table.py  539e9fcee66d_create_users_table.py
app/: Dockerfile  main.py
app/apis/: patient.py  practice_apis.py  user.py  user_router.py
app/core/: config.py  security.py
app/models/: patient.py  record.py  user.py
app/repositories/: user_repository.py
app/schemas/: patient.py  user_schema.py
app/services/: patient_service.py  user_service.py
test/: Meeting_log.md  박소정.md  박지은_2일차_git_branch_전략.md  박지은_3일차_folders.md  홍현정.md
